recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value step
  if (step>=1){
      ^Tree:7: error: not found: value lenght
  tree(steps-1,lenght*shrink,angle,shrink)
               ^Tree:9: error: not found: value lenght
  tree(steps-1,lenght*shrink,angle,shrink)
               ^Tree:10: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^