recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  if (step>=1){
  
  avance(length)
  droite(angle)
  tree(steps-1,lenght*shrink,angle,shrink)
  gauche(2*angle)
  tree(steps-1,lenght*shrink,angle,shrink)
  droite()
  recule(length)
  }else{
    return
  }
}